[package]
name = "image_to_ascii"
description = "turns images into ascii characters"
version = "0.1.0"
edition = "2021"
lisence = "MIT OR Apache-2.0"
keywords = ["image", "ascii"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.4"